Random module in numpy

--- a/PYTHON_FOR_DATA_SCIENCE/Numpy/convert_collection_type_into_ndarray.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Numpy/convert_collection_type_into_ndarray.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d8f70b38-f544-4d84-9b71-d44138980932",
    "metadata": {},
    "outputs": [
@@ -29,14 +29,24 @@
      "output_type": "stream",
      "text": [
       "Elements in list :  [1011, 'Harshal', 23.45, (2+3j)]\n",
-      "Type of lst : <class 'list'>\n"
+      "Type of lst : <class 'list'>\n",
+      "Size of lst in bytes: 200 <class 'int'>\n",
+      "Size of arr in bytes: 180 <class 'numpy.ndarray'>\n"
      ]
     }
    ],
    "source": [
     "lst = [1011,\"Harshal\",23.45,2+3j]\n",
     "print(\"Elements in list : \",lst)\n",
-    "print(\"Type of lst :\",type(lst))"
+    "print(\"Type of lst :\",type(lst))\n",
+    "\n",
+    "import numpy as np\n",
+    "import sys\n",
+    "lst = [1,23,32,345,45,45,454,564,2342,1,23,32,345,45,45,454,5642342]\n",
+    "s = sys.getsizeof(lst)\n",
+    "print(\"Size of lst in bytes:\",s,type(s))\n",
+    "arr = np.array(lst)\n",
+    "print(\"Size of arr in bytes:\",sys.getsizeof(arr),type(arr))"
    ]
   },
   {
