New operators in Numpy

--- a/PYTHON_FOR_DATA_SCIENCE/Numpy/operators/operator.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Numpy/operators/operator.ipynb
@@ -98,6 +98,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array 1 : \n",
+      " [[77 15 25 73]\n",
+      " [58 23 69 26]]\n",
+      "Array 2 : \n",
+      " [[54 52 71 45]\n",
+      " [38 49 81 42]]\n",
+      "Array 3 : \n",
+      " [[131  67  96 118]\n",
+      " [ 96  72 150  68]]\n",
+      "Array 4 : \n",
+      " [[ 23 -37 -46  28]\n",
+      " [ 20 -26 -12 -16]]\n",
+      "Multiply : [[4158  780 1775 3285]\n",
+      " [2204 1127 5589 1092]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Operators\n",
+    "\n",
+    "import numpy as np\n",
+    "arr1 = np.random.randint(2,90,size=(2,4))\n",
+    "arr2 = np.random.randint(2,90,size=(2,4))\n",
+    "print(\"Array 1 : \\n\", arr1)\n",
+    "print(\"Array 2 : \\n\", arr2)\n",
+    "arr3 = np.add(arr1,arr2)\n",
+    "print(\"Array 3 : \\n\", arr3)\n",
+    "arr4 = np.subtract(arr1,arr2)\n",
+    "print(\"Array 4 : \\n\", arr4)\n",
+    "arr5 = np.multiply(arr1,arr2)\n",
+    "print(\"Multiply :\",arr5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
