Stock market evaluation

--- a/PYTHON_FOR_DATA_SCIENCE/Numpy/Random/randn_and_normal.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Numpy/Random/randn_and_normal.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ec3e9e9b-2379-4a6d-a0b3-cb06cb1debba",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random value : -1.1415410795228382\n"
+      "Random value : 0.439609843587616\n"
      ]
     }
    ],
@@ -30,6 +30,26 @@
     "from numpy import random as r\n",
     "val = r.randn()\n",
     "print(\"Random value :\",val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7bafbc1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.96331637 -0.75105207  0.54791788 -0.83999189]\n",
+      " [ 3.7399496   1.14839579 -1.82902972 -0.62284759]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = r.normal(1,2,size=(2,4))\n",
+    "print(arr)"
    ]
   },
   {
@@ -484,9 +504,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -498,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
