--- a/PYTHON_FOR_DATA_SCIENCE/Numpy/linspace_method.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Numpy/linspace_method.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "de794380-2c50-4a98-b1bc-4673dc25373b",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f3ed5119-967f-4a02-8bb5-9eaca104deaa",
    "metadata": {},
    "outputs": [
@@ -86,14 +86,14 @@
     }
    ],
    "source": [
-    "arr,step = np.linspace(10,11,retstep=True)\n",
-    "print(arr,type(arr))\n",
-    "print(\"Difference between two values :\",step)"
+    "# arr,step = np.linspace(10,11,retstep=True)\n",
+    "# print(arr,type(arr))\n",
+    "# print(\"Difference between two values :\",step)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "cf7c3580-7888-408c-a27a-c515a1353739",
    "metadata": {},
    "outputs": [
@@ -101,13 +101,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11. 12. 13. 14. 15.] <class 'numpy.ndarray'>\n",
-      "Difference between two values : 1.0\n"
+      "[ 5. 10. 15. 20. 25.] <class 'numpy.ndarray'>\n",
+      "Difference between two values : 5.0\n"
      ]
     }
    ],
    "source": [
-    "arr,step = np.linspace(11,15,num=5,retstep=True)\n",
+    "arr,step = np.linspace(5,25,num=5,retstep=True)\n",
     "print(arr,type(arr))\n",
     "print(\"Difference between two values :\",step)"
    ]
@@ -115,7 +115,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7429e412-dee2-4f93-bbad-8ad3c4708957",
+   "id": "b7e6c8e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a91c972e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -123,9 +131,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -137,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
