--- a/PYTHON_FOR_DATA_SCIENCE/Numpy/operators/operator.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Numpy/operators/operator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,19 +10,20 @@
      "output_type": "stream",
      "text": [
       "Array 1 : \n",
-      " [[11 46 64 72]\n",
-      " [71 24 38 44]]\n",
+      " [[28 64  2 46]\n",
+      " [14 37 71 81]]\n",
       "Array 2 : \n",
-      " [[71 59 80  9]\n",
-      " [43 72 52 65]]\n",
-      "Addition : [[ 82 105 144  81]\n",
-      " [114  96  90 109]]\n"
+      " [[29 82 76 82]\n",
+      " [43 50 21 13]]\n",
+      "Addition : [[ 57 146  78 128]\n",
+      " [ 57  87  92  94]]\n"
      ]
     }
    ],
    "source": [
     "# Operators\n",
     "\n",
+    "# Addition()\n",
     "import numpy as np\n",
     "arr1 = np.random.randint(2,90,size=(2,4))\n",
     "arr2 = np.random.randint(2,90,size=(2,4))\n",
@@ -42,19 +43,20 @@
      "output_type": "stream",
      "text": [
       "Array 1 : \n",
-      " [[42 13 89 47]\n",
-      " [57  6 34 38]]\n",
+      " [[35 49 82 52]\n",
+      " [54  8 81 35]]\n",
       "Array 2 : \n",
-      " [[18 18  5 30]\n",
-      " [26 22 80 86]]\n",
-      "Substraction : [[ 24  -5  84  17]\n",
-      " [ 31 -16 -46 -48]]\n"
+      " [[41 87 77 89]\n",
+      " [67 38 24 22]]\n",
+      "Substraction : [[ -6 -38   5 -37]\n",
+      " [-13 -30  57  13]]\n"
      ]
     }
    ],
    "source": [
     "# Operators\n",
     "\n",
+    "# Substract()\n",
     "import numpy as np\n",
     "arr1 = np.random.randint(2,90,size=(2,4))\n",
     "arr2 = np.random.randint(2,90,size=(2,4))\n",
@@ -87,6 +89,7 @@
    "source": [
     "# Operators\n",
     "\n",
+    "# Multiply()\n",
     "import numpy as np\n",
     "arr1 = np.random.randint(2,90,size=(2,4))\n",
     "arr2 = np.random.randint(2,90,size=(2,4))\n",
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,19 +109,19 @@
      "output_type": "stream",
      "text": [
       "Array 1 : \n",
-      " [[77 15 25 73]\n",
-      " [58 23 69 26]]\n",
+      " [[28 56 59 27]\n",
+      " [79 89  9 29]]\n",
       "Array 2 : \n",
-      " [[54 52 71 45]\n",
-      " [38 49 81 42]]\n",
+      " [[63  9 69 38]\n",
+      " [87 80 19  5]]\n",
       "Array 3 : \n",
-      " [[131  67  96 118]\n",
-      " [ 96  72 150  68]]\n",
+      " [[ 91  65 128  65]\n",
+      " [166 169  28  34]]\n",
       "Array 4 : \n",
-      " [[ 23 -37 -46  28]\n",
-      " [ 20 -26 -12 -16]]\n",
-      "Multiply : [[4158  780 1775 3285]\n",
-      " [2204 1127 5589 1092]]\n"
+      " [[-35  47 -10 -11]\n",
+      " [ -8   9 -10  24]]\n",
+      "Multiply : [[1764  504 4071 1026]\n",
+      " [6873 7120  171  145]]\n"
      ]
     }
    ],
@@ -136,6 +139,231 @@
     "print(\"Array 4 : \\n\", arr4)\n",
     "arr5 = np.multiply(arr1,arr2)\n",
     "print(\"Multiply :\",arr5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original :\n",
+      " [[2 4]\n",
+      " [3 5]]\n",
+      "original :\n",
+      " [[5 6]\n",
+      " [7 8]]\n",
+      "Dot product of array is :\n",
+      " [[38 44]\n",
+      " [50 58]]\n",
+      "Dot product of array is :\n",
+      " [[38 44]\n",
+      " [50 58]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Operator\n",
+    "\n",
+    "# each row of first matrix multiply with each column of second matrix\n",
+    "# dot()\n",
+    "# matmul()\n",
+    "# [[2,4],[3,5]] [[5,6],[7,8]]--->[[2*5+7*4  2*6+4*8],[3*5+7*5  3*6+8*5]]\n",
+    "arr1 = np.array([2,4,3,5]).reshape(2,2)\n",
+    "arr2 = np.array([5,6,7,8]).reshape(2,2)\n",
+    "print(\"original :\\n\",arr1)\n",
+    "print(\"original :\\n\",arr2)\n",
+    "print(\"Dot product of array is :\\n\",np.dot(arr1,arr2))\n",
+    "print(\"Dot product of array is :\\n\",np.matmul(arr1,arr2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original :\n",
+      " [[44 75]\n",
+      " [44 39]]\n",
+      "original :\n",
+      " [[2 2]\n",
+      " [2 2]]\n",
+      "Dot product of array is :\n",
+      " [[238 238]\n",
+      " [166 166]]\n",
+      "Dot product of array is :\n",
+      " [[238 238]\n",
+      " [166 166]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Operator\n",
+    "\n",
+    "# each row of first matrix multiply with each column of second matrix\n",
+    "# dot()\n",
+    "# matmul()\n",
+    "# [[2,4],[3,5]] [[5,6],[7,8]]--->[[2*5+7*4  2*6+4*8],[3*5+7*5  3*6+8*5]]\n",
+    "arr1 = np.random.randint(23,99,size=(2,2))\n",
+    "arr2 = np.random.randint(2,3,size=(2,2))\n",
+    "print(\"original :\\n\",arr1)\n",
+    "print(\"original :\\n\",arr2)\n",
+    "print(\"Dot product of array is :\\n\",np.dot(arr1,arr2))\n",
+    "print(\"Dot product of array is :\\n\",np.matmul(arr1,arr2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10. 10. 10. 10. 10.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operator\n",
+    "\n",
+    "# division()\n",
+    "arr1 = np.array([10, 20, 30, 40, 50])\n",
+    "arr2 = np.array([1, 2, 3, 4, 5])\n",
+    "print(np.divide(arr1, arr2))  # Output: [10.  10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10. 10.]\n",
+      " [10. 10.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operator\n",
+    "\n",
+    "# division()\n",
+    "arr1 = np.array([10, 20, 30, 40]).reshape(2,2)\n",
+    "arr2 = np.array([1, 2, 3, 4]).reshape(2,2)\n",
+    "print(np.divide(arr1, arr2)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 10]\n",
+      " [10 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operator\n",
+    "\n",
+    "# floor_division()\n",
+    "arr1 = np.array([10, 20, 30, 40]).reshape(2,2)\n",
+    "arr2 = np.array([1, 2, 3, 4]).reshape(2,2)\n",
+    "print(np.floor_divide(arr1, arr2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0]\n",
+      " [0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operator\n",
+    "\n",
+    "# mod()\n",
+    "arr1 = np.array([10, 20, 30, 40]).reshape(2,2)\n",
+    "arr2 = np.array([1, 2, 3, 4]).reshape(2,2)\n",
+    "print(np.mod(arr1, arr2))  # Output: [10.  10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[90 73]\n",
+      " [47 48]]\n",
+      "[[16 38]\n",
+      " [61 37]]\n",
+      "[[10 35]\n",
+      " [47 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operator\n",
+    "\n",
+    "# mod()\n",
+    "arr1 = np.random.randint(23,99,size=(2,2))\n",
+    "arr2 = np.random.randint(12,77,size=(2,2))\n",
+    "print(arr1,arr2,sep='\\n')\n",
+    "print(np.mod(arr1, arr2))  # Output: [10.  10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15 14]\n",
+      " [14 18]]\n",
+      "[[2 2]\n",
+      " [2 2]]\n",
+      "[[225 196]\n",
+      " [196 324]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operator\n",
+    "\n",
+    "# power()\n",
+    "arr1 = np.random.randint(11,19,size=(2,2))\n",
+    "arr2 = np.random.randint(2,3,size=(2,2))\n",
+    "print(arr1,arr2,sep='\\n')\n",
+    "print(np.power(arr1, arr2))  # Output: [10.  10."
    ]
   },
   {
