--- a/PYTHON_FOR_DATA_SCIENCE/Numpy/stastics/max_min.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Numpy/stastics/max_min.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[23 53 79  3 86 24 42 44 37 17 57  2 86 41  8 24 86 53 18 75]\n",
-      "Max :  86\n",
+      "[25 31 28 79 57 10  2 10 85 30 12 14 79 55 26 33 27  9 49 38]\n",
+      "Max :  85\n",
       "Min :  2\n"
      ]
     }
@@ -26,22 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[37 75 42 35]\n",
-      " [25 18 22 63]\n",
-      " [80 79 72 10]]\n",
-      "Max :  80\n",
-      "Min :  10\n",
-      "Column Wise Max :  [80 79 72 63]\n",
-      "Row Wise Max :  [75 63 80]\n",
-      "Column Wise Min :  [80 79 72 63]\n",
-      "Row Wise Min :  [35 18 10]\n"
+      "[[38 72  3 23]\n",
+      " [11 69 75 76]\n",
+      " [67 13 36 59]]\n",
+      "Max :  76\n",
+      "Min :  3\n",
+      "Column Wise Max :  [67 72 75 76]\n",
+      "Row Wise Max :  [72 76 67]\n",
+      "Column Wise Min :  [67 72 75 76]\n",
+      "Row Wise Min :  [ 3 11 13]\n"
      ]
     }
    ],
@@ -90,6 +90,43 @@
     "print(\"Row Wise Max : \",np.amax(arr,axis=1)) # return maxium value in each row\n",
     "print(\"Column Wise Min : \",np.amax(arr,axis=0)) # return minium value in each column\n",
     "print(\"Row Wise Min : \",np.amin(arr,axis=1)) # return minium value in each row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[64 35 25 59 38]\n",
+      " [79 86 58 91 33]\n",
+      " [55  5 50 45 34]\n",
+      " [48 93 34 56 81]]\n",
+      "Max in matrix : 93\n",
+      "Min in matrix : 5\n",
+      "Column max :  [79 93 58 91 81]\n",
+      "Column min :  [25 33  5 34]\n",
+      "Row min :  [48  5 25 45 33]\n",
+      "Row max :  [64 91 55 93]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = r.randint(2,99,size=(4,5))\n",
+    "print(arr)\n",
+    "print(\"Max in matrix :\",np.amax(arr))\n",
+    "print(\"Min in matrix :\",np.amin(arr))\n",
+    "colmax = np.amax(arr,axis=0)\n",
+    "rowmax = np.amax(arr,axis=1)\n",
+    "rowmin = np.amin(arr,axis=0)\n",
+    "colmin = np.amin(arr,axis=1)\n",
+    "print(\"Column max : \",colmax)\n",
+    "print(\"Column min : \",colmin)\n",
+    "print(\"Row min : \",rowmin)\n",
+    "print(\"Row max : \",rowmax)"
    ]
   },
   {
