--- a/PYTHON_FOR_DATA_SCIENCE/Numpy/split_method.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Numpy/split_method.ipynb
@@ -185,6 +185,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array : [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "Advance slicing : [ 0  5 10 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# diagolan element\n",
+    "# diag() without\n",
+    "\n",
+    "arr = np.arange(16).reshape(4,4)\n",
+    "print(\"Array :\",arr)\n",
+    "print(\"Advance slicing :\",arr[(0,1,2,3),(0,1,2,3)]) #Advance Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array : [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "Advance slicing : [ 0  5 10 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# diagolan element\n",
+    "# diag()\n",
+    "\n",
+    "arr = np.arange(16).reshape(4,4)\n",
+    "print(\"Array :\",arr)\n",
+    "print(\"Advance slicing :\",np.diag(arr)) #Advance Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array : [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "Transpose Matrix using T attribute: [[ 0  4  8 12]\n",
+      " [ 1  5  9 13]\n",
+      " [ 2  6 10 14]\n",
+      " [ 3  7 11 15]]\n",
+      "Transpose Matrix using transpose attribute: [[ 0  4  8 12]\n",
+      " [ 1  5  9 13]\n",
+      " [ 2  6 10 14]\n",
+      " [ 3  7 11 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tranpose matrix\n",
+    "\n",
+    "arr = np.arange(16).reshape(4,4)\n",
+    "print(\"Array :\",arr)\n",
+    "print(\"Transpose Matrix using T attribute:\",arr.T)\n",
+    "print(\"Transpose Matrix using transpose attribute:\",np.transpose(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array : [[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]]\n",
+      "Transpose Matrix using T atttribute: [[0 2 4 6]\n",
+      " [1 3 5 7]]\n",
+      "Transpose Matrix using transpose method: [[0 2 4 6]\n",
+      " [1 3 5 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tranpose matrix\n",
+    "\n",
+    "arr = np.arange(8).reshape(4,2)\n",
+    "print(\"Array :\",arr)\n",
+    "print(\"Transpose Matrix using T atttribute:\",arr.T)\n",
+    "print(\"Transpose Matrix using transpose method:\",arr.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
