--- a/PYTHON_FOR_DATA_SCIENCE/Numpy/Working_files/csv_file.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Numpy/Working_files/csv_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,92 @@
     "# read data from csv file\n",
     "import numpy as np\n",
     "fdata = np.genfromtxt(\"./csv_file.csv\",delimiter=',')\n",
+    "print(\"File Data :\",fdata)\n",
+    "print(\"type :\",type(fdata))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file Saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Writing data in CSV file and Reading data from File.\n",
+    "with open(\"./csv_file1.csv\",'w') as fp:\n",
+    "    fp.write(\"Harshal Kunal\\nRam Prathamesh\\nAniket Sagar\")\n",
+    "    print(\"file Saved.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Data : [nan nan nan]\n",
+      "type : <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read data from csv file\n",
+    "import numpy as np\n",
+    "fdata = np.genfromtxt(\"./csv_file1.csv\",delimiter=',')\n",
+    "print(\"File Data :\",fdata)\n",
+    "print(\"type :\",type(fdata))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Data : ['Harshal Kunal' 'Ram Prathamesh' 'Aniket Sagar']\n",
+      "type : <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read data from csv file\n",
+    "import numpy as np\n",
+    "fdata = np.genfromtxt(\"./csv_file1.csv\",delimiter=',',dtype=str)\n",
+    "print(\"File Data :\",fdata)\n",
+    "print(\"type :\",type(fdata))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Data : ['Harshal Kunal' 'Ram Prathamesh' 'Aniket Sagar']\n",
+      "type : <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read data from csv file\n",
+    "import numpy as np\n",
+    "fdata = np.loadtxt(\"./csv_file1.csv\",delimiter=',',dtype=str)\n",
     "print(\"File Data :\",fdata)\n",
     "print(\"type :\",type(fdata))"
    ]
