Series Operation Completed

--- a/PYTHON_FOR_DATA_SCIENCE/Pandas/Series/operation.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Pandas/Series/operation.ipynb
@@ -843,6 +843,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series Data :\n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    10\n",
+      "4    20\n",
+      "5    40\n",
+      "6    60\n",
+      "7    30\n",
+      "dtype: int64\n",
+      "-----------------------------\n",
+      "Only Unique values in Series object\n",
+      "[10 20 30 40 60]\n",
+      "-------------------------\n",
+      "Total Unique values in series : 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finding unique values in series object\n",
+    "import pandas as pd\n",
+    "arr = pd.Series([10,20,30,10,20,40,60,30])\n",
+    "print(\"Series Data :\")\n",
+    "print(arr)\n",
+    "print(\"-----------------------------\")\n",
+    "print(\"Only Unique values in Series object\")\n",
+    "print(arr.unique())\n",
+    "print(\"-------------------------\")\n",
+    "print(\"Total Unique values in series :\",arr.nunique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series object :\n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    20\n",
+      "4    10\n",
+      "5    40\n",
+      "6    30\n",
+      "7    50\n",
+      "dtype: int64\n",
+      "-----------------------\n",
+      "Values\tCount\n",
+      "10    2\n",
+      "20    2\n",
+      "30    2\n",
+      "40    1\n",
+      "50    1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finding no.of.Occurences of series object\n",
+    "\n",
+    "arr=pd.Series([10,20,30,20,10,40,30,50])\n",
+    "print(\"Series object :\")\n",
+    "print(arr)\n",
+    "print(\"-----------------------\")\n",
+    "print(\"Values\\tCount\")\n",
+    "print(arr.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values\tCount\n",
+      "10\t2\n",
+      "20\t2\n",
+      "30\t2\n",
+      "40\t1\n",
+      "50\t1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# my code of values_count()\n",
+    "d1 = {}\n",
+    "l1 = list(arr)\n",
+    "for i in l1:\n",
+    "    d1[i]=l1.count(i)\n",
+    "print(\"Values\\tCount\")\n",
+    "for val,count in d1.items():\n",
+    "    print(f\"{val}\\t{count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
