Accessing data from df

--- a/PYTHON_FOR_DATA_SCIENCE/Pandas/Dataframe/assess_data_from_df.ipynb
+++ b/PYTHON_FOR_DATA_SCIENCE/Pandas/Dataframe/assess_data_from_df.ipynb
@@ -175,6 +175,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accessing data in pandas\n",
+      "Data :\n",
+      "   sno            sname  marks subject\n",
+      "0    1  Harshal Kharabe  89.98  Python\n",
+      "1    2       Sagar Dhok  92.89  Python\n",
+      "2    3    Aniket Bhudke  92.23   React\n",
+      "3    4      Kunal Aswar  90.90  Django\n",
+      "4   10  Harshal Kharabe  89.98  Python\n",
+      "5   21       Sagar Dhok  92.89  Python\n",
+      "6   31    Aniket Bhudke  92.23   React\n",
+      "7   41      Kunal Aswar  90.90  Django\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "print(\"Accessing data in pandas\")\n",
+    "df = pd.read_csv(\"data.csv\")\n",
+    "print(\"Data :\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sno            sname  marks subject\n",
+      "0    1  Harshal Kharabe  89.98  Python\n",
+      "2    3    Aniket Bhudke  92.23   React\n",
+      "4   10  Harshal Kharabe  89.98  Python\n",
+      "6   31    Aniket Bhudke  92.23   React\n",
+      "------------------------------------------\n",
+      "   sno        sname  marks subject\n",
+      "1    2   Sagar Dhok  92.89  Python\n",
+      "3    4  Kunal Aswar  90.90  Django\n",
+      "5   21   Sagar Dhok  92.89  Python\n",
+      "7   41  Kunal Aswar  90.90  Django\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get record by record by using iterrows()\n",
+    "# for rec in df.iterrows():\n",
+    "#     print(rec)\n",
+    "\n",
+    "print(df[::2])\n",
+    "print(\"------------------------------------------\")\n",
+    "print(df[1::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
